# VibeGEMM

./: CMakeLists.txt  README.md  main.cu  plot_perf.py
csrc/: cublas_backends.cu  gemm_a100_backends.cu  gemm_h100_backends.cu
csrc/a100/: gemm_8192x8192_v0.cuh  gemm_8192x8192_v1.cuh  gemm_8192x8192_v10.cuh  gemm_8192x8192_v11.cuh  gemm_8192x8192_v2.cuh  gemm_8192x8192_v3.cuh  gemm_8192x8192_v4.cuh  gemm_8192x8192_v5.cuh  gemm_8192x8192_v6.cuh  gemm_8192x8192_v7.cuh  gemm_8192x8192_v8.cuh  gemm_8192x8192_v9.cuh
csrc/h100/: gemm_8192x8192_v0.cuh  gemm_8192x8192_v1.cuh  gemm_8192x8192_v10.cuh  gemm_8192x8192_v11.cuh  gemm_8192x8192_v12.cuh  gemm_8192x8192_v13.cuh  gemm_8192x8192_v14.cuh  gemm_8192x8192_v15.cuh  gemm_8192x8192_v16.cuh  gemm_8192x8192_v17.cuh  gemm_8192x8192_v18.cuh  gemm_8192x8192_v19.cuh  gemm_8192x8192_v2.cuh  gemm_8192x8192_v20.cuh  gemm_8192x8192_v3.cuh  gemm_8192x8192_v4.cuh  gemm_8192x8192_v5.cuh  gemm_8192x8192_v6.cuh  gemm_8192x8192_v7.cuh  gemm_8192x8192_v8.cuh  gemm_8192x8192_v9.cuh
include/: backend.cuh  engine.cuh  registry.cuh  utils.cuh
results/: perf_a100.txt  perf_h100.txt
